--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Weather App</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <button onclick="getWeather()">Get Current Weather</button>
+  <div id="weatherData"></div>
 
+  <script>
+    async function getWeather() {
+      const apiKey = 'YOUR_API_KEY';  // Replace with your OpenWeatherMap API key
+      const city = 'London';
+      const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}`;
+
+      try {
+        const response = await fetch(apiUrl);
+        if (!response.ok) {
+          throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const data = await response.json();
+        const weatherDescription = data.weather[0].main;
+
+        document.getElementById('weatherData').textContent = 
+          `Current weather in ${city}: ${weatherDescription}`;
+      } catch (error) {
+        console.error('Error fetching weather data:', error);
+        document.getElementById('weatherData').textContent = 
+          'Failed to retrieve weather data.';
+      }
+    }
+  </script>
 </body>
-
 </html>
