--- a/main.html
+++ b/main.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Weather App</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-<button onclick="getWeather()">Get Current Weather</button>
+  <button onclick="getWeather()">Get Current Weather</button>
   <div id="weatherData"></div>
-</body>
 
+  <script src="script.js"></script>
+</body>
 </html>
