--- a/main.html
+++ b/main.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Weather App</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>Weather API</title>
 </head>
 <body>
+  <h1>Weather API</h1>
   <button onclick="getWeather()">Get Current Weather</button>
-  <div id="weatherData"></div>
+  <div id="weatherData" style="margin-top: 20px; font-size: 18px;"></div>
 
-  <script src="script.js"></script>
+  <script>
+    async function getWeather() {
+      const apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
+      const city = 'London';
+      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}`;
+
+      try {
+        const response = await fetch(url, {
+          method: 'GET',
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        });
+
+        if (!response.ok) {
+          throw new Error('Failed to fetch weather data');
+        }
+
+        const data = await response.json();
+        const weatherDescription = data.weather[0].main;
+
+        document.getElementById('weatherData').textContent =
+          `Current weather in London: ${weatherDescription}`;
+      } catch (error) {
+        document.getElementById('weatherData').textContent =
+          'Error fetching weather data';
+        console.error(error);
+      }
+    }
+  </script>
 </body>
 </html>
